# OpenBCI_GUI_Helpers

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cspell.json
.github/workflows/: build_deploy.yml  clang-format.yml  cppcheck.yml  spellcheck.yml
cmake/: default.cmake
java-package/openbci_gui_helpers/: pom.xml
java-package/openbci_gui_helpers/src/main/java/com/openbci/: GUIHelper.java  GanglionError.java  GanglionExitCodes.java
java-package/openbci_gui_helpers/src/main/java/com/openbci/examples/: TestDiscovery.java  TestWifiDiscovery.java
java-package/openbci_gui_helpers/src/main/java/openbci_gui_helpers/: GUIHelper.java  GanglionDevice.java  GanglionError.java  GanglionExitCodes.java  WIFIInfo.java
java-package/openbci_gui_helpers/src/main/java/openbci_gui_helpers/examples/: TestDiscovery.java  TestNativeDiscovery.java  TestWifiDiscovery.java
modules/bglib/: build.cmake
modules/bglib/include/: openbci_gui_helpers.h  uart.h
modules/bglib/src/: callbacks.cpp  openbci_gui_helpers.cpp  stubs.cpp  uart.cpp
modules/common/include/: serialization.h
modules/common/src/: serialization.cpp
modules/inc/: multicast_client.h
modules/native-ble/: build.cmake
modules/native-ble/include/: openbci_gui_native_helpers.h
modules/native-ble/src/: openbci_gui_native_helpers.cpp
src/: multicast_client.cpp  openbci_gui_helpers.cpp  openbci_gui_native_helpers.cpp
src/inc/: openbci_gui_helpers.h  openbci_gui_native_helpers.h
